<resources>
    <string name="app_name">Proyecto DISMOV</string>
    <string name="InicioSesion">Iniciar Sesión</string>
    <string name="NoRegistrado">¿Aun no estas registrado? Hazlo aqui</string>
    <string name="EsContra">_</string>
    <string name="EsCorreo">_</string>
    <string name="cleng">ES/ENG</string>
    <string name="EmailLogin">Correo Electronico</string>
    <string name="ContraLogin">Contraseña</string>
    <string name="bienve">¡Bienvenid@!</string>
    <string name="closesesion">Cerrar Sesión</string>
    <string name="cleng2">ES/ENG</string>
    <string name="emailregis">Correo Electronico</string>
    <string name="contraregis">Ingrese su contraseña</string>
    <string name="contrarepetida">Confirme su contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="cleng3">ES/ENG</string>
    <string name="yatienecuenta">¿Ya tienes una cuenta? ¡Inicia sesión aqui!</string>
    <string name="closesesion2">Cerrar sesion admin</string>
    <string name="esadmin">Bienvenid@ Administrador/a</string>
    <string name="cleng4">ES/ENG</string>
    <string name="userregis">Ingrese su nombre de usuario</string>
    <string name="cleng5">ES/ENG</string>
    <string name="userregis1">Ingrese su nombre de usuario</string>
    <string name="joinbutton"> Unirse </string>
    <string name="logoutbutton">Regresar</string>
    <string name="porfavor">Por favor comparte este codigo con tus amigos para poder unirse</string>
    <string name="codigo">Codigo Secreto</string>
    <string name="cleng6">ES/ENG</string>
    <string name="videoboton">Videollamada</string>


</resources>