<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#3E1313">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/foto1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/porfavor" />

            <EditText
                android:id="@+id/codeBox"
                android:layout_width="match_parent"
                android:layout_height="343dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondoblanco"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/codigo"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/joinBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/joinbutton"
                    android:textColor="@android:color/white" />


                <Button
                    android:id="@+id/logOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:drawablePadding="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/logoutbutton"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Switch
        android:id="@+id/cleng6"
        android:layout_width="133dp"
        android:layout_height="26dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="12dp"
        android:text="@string/cleng6"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>