<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoblanco"
    tools:context=".MainActivity">


    <Switch
        android:id="@+id/cleng2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="29dp"
        android:text="@string/cleng2"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bienve"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="32dp"
        android:text="@string/bienve"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/closesesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="223dp"
        android:layout_height="254dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bienve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foto1" />

    <Button
        android:id="@+id/closesesion"
        android:layout_width="383dp"
        android:layout_height="55dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="229dp"
        android:backgroundTint="@color/green"
        android:text="@string/closesesion"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienve" />

</androidx.constraintlayout.widget.ConstraintLayout>