<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoblanco"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="221dp"
        android:layout_height="217dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/hadmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foto1" />

    <Switch
        android:id="@+id/cleng4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="11dp"
        android:text="@string/cleng4"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/closesesion2"
        android:layout_width="310dp"
        android:layout_height="72dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="@color/green"
        android:text="@string/closesesion2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hadmin" />

    <TextView
        android:id="@+id/hadmin"
        android:layout_width="270dp"
        android:layout_height="79dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="81dp"
        android:text="@string/esadmin"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/closesesion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.83" />
</androidx.constraintlayout.widget.ConstraintLayout>